# CppChatting

KotlinChat/: build.gradle.kts
KotlinChat/protos/: Hello.proto
KotlinChat/src/main/kotlin/com/albireo3754/Chat/: ChatApplication.kt  EchoHandler.kt  WebSocketConfiguration.kt
KotlinChat/src/main/proto/: test.proto
KotlinChat/src/main/resources/: application.properties
KotlinChat/src/test/kotlin/com/albireo3754/Chat/: ChatApplicationTests.kt  WebSocketEndpointTests.kt
RustChat/: Cargo.toml
RustChat/src/: main.rs  proto.proto  session.rs
SimpleChatClient/: SimpleChatClient.sln
SimpleChatClient/SimpleChatClient/: SimpleChatClient.cpp  SimpleChatClient.vcxproj  SimpleChatClient.vcxproj.filters
SimpleChatServer/: SimpleChatServer.sln
SimpleChatServer/IOCPSimpleChatServer/: IOCPNetwork.cpp  IOCPNetwork.h  IOCPSimpleChatServer.cpp  IOCPSimpleChatServer.h  IOCPSimpleChatServer.vcxproj  IOCPSimpleChatServer.vcxproj.filters  IOCompletionPort.h  Socket.h  Test.cpp
SimpleChatServer/IOCPSimpleChatServerTests/: IOCPSimpleChatServerTests.vcxproj  IOCPSimpleChatServerTests.vcxproj.filters  UnOrderdMapStudyTests.cpp  UnOrderedMapStudyTests.h
SimpleChatServer/SimpleChatServer/: SimpleChatServer.cpp  SimpleChatServer.vcxproj  SimpleChatServer.vcxproj.filters
SimpleChatServer/enc_temp_folder/16d6cbeed04bb81349c9f44a5fa8480/: IOCompletionPort.h
SimpleChatServer/enc_temp_folder/6f2bf04bf1ebb9fd25fd9dfe086a1eb/: Socket.h
SimpleChatServer/enc_temp_folder/bd853879c6d639ab53a85d6bdda63e4/: SimpleChatServer.cpp
(+1 files in other folders)
