[package]
name = "RustChat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.35.0", features = ["full"] }
env_logger = { version = "0.10.1" }
log = { version = "0.4.8", features = ["std"] }
tonic = { version = "0.10.2" }
prost = { version = "0.12.3" }

[build-dependencies]
tonic-build = "0.10.2"

[[bin]]
name = "dummy-client"